test/spec_vectors/unreached-invalid/fail/module_0.wat
(module (func $local-index (unreachable) (drop (local.get 0))))